= Release Notes
include::include.adoc[]

== 1.2-RC2 (tbd)

=== What's New In This release

* The `@Retry` extension can now be configured to evaluate a `condition` (<<extensions.adoc#_retry,Docs>>)

== 1.2-RC1 (2018-08-14)

Breaking Changes: Spock 1.2 drops support for Java 6, Groovy 2.0 and Groovy 2.3

=== What's New In This release

* Add Groovy 2.5.0 Variant for better Java 10 Support
* Add @SpringBean and @SpringSpy inspired by @MockBean, Also add @StubBeans
* Add @UnwrapAopProxy to make automatically unwrap SpringAopProxie
* Add flag to UnrollNameProvider to assert unroll expressions (set the system property `spock.assertUnrollExpressions` to `true`) https://github.com/spockframework/spock/issues/767[#767]
* Add automatic module name descriptors for Java 9
* Add `@AutoAttach` extension (<<extensions.adoc#_autoattach,Docs>>)
* Add `@Retry` extension (<<extensions.adoc#_retry,Docs>>)
* Fix SpockAssertionErrors and its subclasses now are properly `Serializeable`
* Fix Spring injection of JUnit Rules, due to the changes in 1.1 the rules where initialized before Spring could inject them,
  this has been fixed by performing the injection earlier in the process
* Fix SpringMockTestExecutionListener initializes lazy beans
* Fix OSGi Import-Package header
* Fix re-declare recorder variables (#783), this caused annotations such as `@Slf4j` to break Specifications
* Fix MissingFieldException in DiffedObjectAsBeanRenderer
* Fix problems with nested `with` and `verifyAll` method calls
* Fix assertion of mock invocation order with nested invocations (#475)
* Fix ignore inferred type for Spies on existing instance
* Improve in assertions Spock now uses `DefaultGroovyMethods.dump` instead of `toString` if a class doesn't override the default `Object.toString`.
* Improve `verifyAll` can now also have a target same as `with`
* Improve static type hints for `verifyAll` and `with`